# brainprep

./: CHANGELOG.rst  README.rst  pyproject.toml  references.bib
.github/: run_examples.py  run_unitests.py
.github/workflows/: codespell.yml  documentation.yml  pep8.yml  pycodestyle.yml  pydoclint.yml  release-documentation.yml  ruff.yml  testing.yml
brainprep/: __init__.py  cli.py  color_utils.py  config.py  connectivity.py  cortical.py  datasets.py  decorators.py  deface.py  info.py  parse_xml.py  plotting.py  qc.py  spatial.py  tbss.py  typing.py  utils.py  wrappers.py
brainprep/datasets/: __init__.py  anatomical.py  ibc.py  multi_modal.py  openms.py  utils.py
brainprep/interfaces/: __init__.py  amico.py  ants.py  cat12.py  custom.py  fmriprep.py  freesurfer.py  fsl.py  geolab.py  morphologist.py  mriqc.py  mrtrix3.py  plotting.py  prequal.py  qualcheck.py  tractseg.py  utils.py
brainprep/reporting/: __init__.py  html_reporting.py  rst_reporting.py  utils.py
brainprep/reporting/data/: base.html  body.html  script.js  style.css
brainprep/resources/: cat12vbm_matlabbatch.m  cat12vbm_matlabbatch_longitudinal.m  kirby21.tsv
brainprep/scripts/: brainprep
brainprep/tests/: test_docstring.py  test_preprocessing.py  test_workflow.py
brainprep/utils/: __init__.py  bunch.py  color.py  utils.py
brainprep/workflow/: __init__.py  brain_parcellation.py  cat12vbm.py  deface.py  defacing.py  dmriprep.py  fmriprep.py  fsreconall.py  mriqc.py  prequal.py  quality_assurance.py  quasiraw.py  sbm.py  sulcirec.py  tbss.py  vbm.py
brainprep/workflow/resources/: iqm_T2w.csv  iqm_desc.csv
containers/: Dockerfile.anat  Dockerfile.brain_parcellation  Dockerfile.brainparc  Dockerfile.defacing  Dockerfile.dmriprep  Dockerfile.fmriprep  Dockerfile.qa  Dockerfile.quality_assurance  Dockerfile.quasiraw  Dockerfile.sbm  Dockerfile.sulcirec  Dockerfile.tbss  Dockerfile.vbm  README.rst  generate_images.py
containers/resources/: entrypoint.sh  pixi.toml  pixi_morphologist.toml
dev/: .buildinfo  authors.html  ci.html  contributing.html  index.html  license.html  maintenance.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sg_execution_times.html  versions.html  whats_new.html
dev/_downloads/0b1074daa8b2c258d2f81b19f929e39a/: plot_defacing.ipynb
dev/_downloads/39014e973602c8227ad9e89933d8a070/: plot_defacing.py
dev/_downloads/3f4280b8eaebea258ab605b0a5f3e880/: plot_rst_reporting.ipynb
dev/_sources/: ci.rst.txt  index.rst.txt  sg_execution_times.rst.txt  versions.rst.txt
dev/_sources/auto_examples/: index.rst.txt  (+10 more)
dev/auto_examples/: index.html  plot_brain_parcellation.html  plot_defacing.html  plot_dmriprep.html  plot_fmriprep.html  plot_html_reporting.html  plot_quality_assurance.html  plot_quasiraw.html  plot_rst_reporting.html  plot_vbm.html  sg_execution_times.html
dev/modules/: brainprep.cli.html  brainprep.config.html  brainprep.connectivity.html  brainprep.cortical.html  brainprep.datasets.anatomical.html  brainprep.datasets.html  brainprep.datasets.ibc.html  brainprep.datasets.multi_modal.html  brainprep.datasets.openms.html  brainprep.datasets.utils.html  brainprep.decorators.html  brainprep.deface.html  brainprep.interfaces.amico.html  brainprep.interfaces.ants.html  brainprep.interfaces.cat12.html  brainprep.interfaces.fmriprep.html  brainprep.interfaces.freesurfer.html  brainprep.interfaces.fsl.html  brainprep.interfaces.geolab.html  brainprep.interfaces.html  brainprep.interfaces.morphologist.html  brainprep.interfaces.mriqc.html  brainprep.interfaces.mrtrix3.html  brainprep.interfaces.plotting.html  brainprep.interfaces.prequal.html  brainprep.interfaces.qualcheck.html  brainprep.interfaces.tractseg.html  brainprep.interfaces.utils.html  brainprep.plotting.html  brainprep.qc.html  brainprep.reporting.html  brainprep.reporting.html_reporting.html  brainprep.reporting.rst_reporting.html  brainprep.reporting.utils.html  brainprep.spatial.html  brainprep.tbss.html  brainprep.utils.bunch.html  brainprep.utils.color.html  brainprep.utils.html  brainprep.utils.utils.html  (+19 more)
dev/user_guide/: brain_parcellation.html  cli.html  defacing.html  dmriprep.html  fmriprep.html  glossary.html  index.html  ontology.html  quality_assurance.html  quasiraw.html  reporting.html  sbm.html  sulcirec.html  tbss.html  tools.html  vbm.html  wrappers.html
doc/: highlights.csv
doc/source/: conf.py
doc/user_guide/: brain_parcellation.rst  cli.rst  defacing.rst  dmriprep.rst  fmriprep.rst  glossary.rst  index.rst  ontology.rst  qa.rst  quality_assurance.rst  quasiraw.rst  reporting.rst  sbm.rst  tbss.rst  vbm.rst  wrappers.rst
examples/: README.txt  plot_brain_parcellation.py  plot_cat12vbm.py  plot_defacing.py  plot_dmriprep.py  plot_fmriprep.py  plot_fsreconall.py  plot_html_reporting.py  plot_mriqc.py  plot_quality_assurance.py  plot_quasiraw.py  plot_rst_reporting.py  plot_sbm.py  plot_vbm.py
examples/tools/: plot_html_reporting.py  plot_rst_reporting.py
examples/tutorials/: README.txt
examples/workflows/: plot_defacing.py  plot_fmriprep.py  plot_quality_assurance.py  plot_sbm.py  plot_sulcirec.py  plot_vbm.py
stable/: .buildinfo  authors.html  contributing.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  sg_execution_times.html  whats_new.html
stable/_sources/: ci.rst.txt  index.rst.txt  sg_execution_times.rst.txt  versions.rst.txt
stable/modules/: brainprep.cli.html  brainprep.config.html  brainprep.datasets.html  brainprep.decorators.html  brainprep.interfaces.fmriprep.html  brainprep.interfaces.freesurfer.html  brainprep.interfaces.fsl.html  brainprep.reporting.html  brainprep.reporting.rst_reporting.html  brainprep.utils.utils.html  brainprep.workflow.defacing.html  brainprep.workflow.html  brainprep.workflow.quality_assurance.html  brainprep.workflow.sbm.html  index.html
stable/user_guide/: cli.html  defacing.html  glossary.html  quasiraw.html  tools.html  vbm.html  wrappers.html
tools/: README.rst
tools/resources/: hopla_config.toml  workflows_config.toml
tools/scaling/: scaling_cli.py
(+173 files in other folders)
