[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "brainprep"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {name = "brainprep developers", email = "antoine.grigis@cea.fr"},
]
license = "CECILL-B"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "nibabel",
    "pandas",
    "scikit-learn",
    "nilearn",
    "matplotlib",
    "seaborn",
    "progressbar2",
    "requests",
    "decorator",
    "Jinja2",
    "fire",
]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "nilearn[ci,doc]"
]
ci = [
    "codespell",
    "pycodestyle",
    "ruff",
    "pynose",
    "coverage",
    "coveralls",
]
doc = [
    "matplotlib",
    "git+https://github.com/AGrigis/pysphinxdoc.git@dev",
]

[project.urls]
Development = "https://github.com/AGrigis/pysphinxdoc"
Tracker = "https://github.com/AGrigis/pysphinxdoc/issues"
Homepage = "https://neurospin-deepinsight.github.io/brainprep/stable"

[tool.setuptools]
platforms = ["Linux", "OSX"]
include-package-data = true
script-files = [
    "brainprep/scripts/brainprep",
]

[tool.setuptools.dynamic]
version = {attr = "brainprep._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
brainprep = [
    "tests/*.py",
    "resources/*.m",
    "resources/*.nii.gz",
    "workflow/resources/*.csv",
    "workflow/resources/*.tsv",
]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
]

[tool.ruff]
extend-exclude = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.codespell]
builtin = "clear,rare,en-GB_to_en-US"
ignore-words = "./.github/codespellignore.txt"
skip = "./.git,*.bib,./brainprep/resources/*,./AUTHORS.rst"
quiet-level = 2
